# RouterSimulator_cpp

./: .clang-format  CMakeLists.txt  Doxyfile  README.md  main.cpp
.github/actions/building/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflows/: workflow.yml
include/algorithms/: Dijkstra.h
include/core/: Admin.h  IPAddress.h  Network.h  Packet.h  PacketBuffer.h  Page.h  PageReassembler.h  Router.h  RoutingTable.h  Terminal.h
include/structures/: list.h
src/algorithms/: Dijkstra.cpp
src/core/: Admin.cpp  Network.cpp  Packet.cpp  PacketBuffer.cpp  Page.cpp  PageReassembler.cpp  Router.cpp  RoutingTable.cpp  Terminal.cpp  dummy.cpp
tests/: test_Dijkstra.cpp  test_IPAddress.cpp  test_Network.cpp  test_Packet.cpp  test_PacketBuffer.cpp  test_Page.cpp  test_PageReassembler.cpp  test_Router.cpp  test_RoutingTable.cpp  test_Terminal.cpp  test_list.cpp
